[package]
name = "mobile-app"
version = "0.1.0"
authors = ["Daelon02 <Daelon02@github.com>"]
edition = "2018"

[package.metadata.cargo-apple.ios]
frameworks = ["AudioToolbox"]

[lib]
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "mobile-app-desktop"
path = "gen/bin/desktop.rs"

[dependencies]
substrate-api-client = { git = "https://github.com/scs/substrate-api-client.git" }
mobile-entry-point = "0.1.1"
bevy = "0.3.0"
openssl = { version = "0.10.32", features = ["vendored"] }

[target.'cfg(target_os = "android")'.dependencies]
ndk-glue = "0.2.1"

[patch.crates-io]
cpal = { git = "https://github.com/francesca64/cpal", branch = "fran-ios" }
