[package]
name = "mobile-app"
version = "0.1.0"
authors = ["Daelon02 <Daelon02@github.com>"]
edition = "2018"

[package.metadata.cargo-apple.ios]
frameworks = ["AudioToolbox"]

[lib]
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "mobile-app-desktop"
path = "gen/bin/desktop.rs"

[dependencies]
substrate-api-client = { git = "https://github.com/scs/substrate-api-client.git" }
mobile-entry-point = "0.1.1"
bevy = "0.3.0"
openssl = { version = "0.10.32", features = ["vendored"] }
serde = { version = "1.0", optional = true, features = ["derive"] }
serde_json = "1.0.64"
env_logger = "0.8.4"
hex-literal = "0.3.1"
sp-core = {git = "https://github.com/paritytech/substrate.git", branch = "master"}
sp-runtime = {git = "https://github.com/paritytech/substrate.git", branch = "master"}
codec = { package = "parity-scale-codec", features = ["derive"], version = "2.0.0" }

[dev-dependencies.clap]
version = "2.33"
features = ["yaml"]

[dependencies.system]
git = "https://github.com/paritytech/substrate.git"
branch = "master"
package = "frame-system"
optional = true

[target.'cfg(target_os = "android")'.dependencies]
ndk-glue = "0.2.1"

[patch.crates-io]
cpal = { git = "https://github.com/francesca64/cpal", branch = "fran-ios" }
